# llm-simulator

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  simulator.example.yaml
.github/workflows/: cd.yml  ci.yml
benches/: latency.rs  throughput.rs
config/: default.yaml  otel-collector.yaml  prometheus.yml  recording-rules.yaml
deploy/helm/llm-simulator/: Chart.yaml  values.yaml
deploy/kubernetes/: configmap.yaml  daemonset.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  statefulset.yaml
deploy/prometheus/: prometheus.yml
deploy/prometheus/rules/: alerts.yml
docs/: OBSERVABILITY-SUMMARY.md  README-OBSERVABILITY.md  metrics-dictionary.md  observability-architecture-diagram.md  observability-architecture.md  observability-implementation-guide.md  slo-definitions.md
docs/pseudocode/: telemetry_system.md
docs/sparc/: PHASE1_SECURITY.md  PHASE2_OBSERVABILITY.md  PHASE3_TESTING.md  PHASE4_OPERATIONS.md  README.md
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: chaos.rs  latency.rs  mod.rs  models.rs  security.rs
src/engine/: chaos.rs  generator.rs  mod.rs  state.rs
src/latency/: mod.rs  sampler.rs
src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs
src/sdk/: builder.rs  client.rs  config.rs  error.rs  mod.rs  streaming.rs
src/security/: api_key.rs  headers.rs  middleware.rs  mod.rs  rate_limit.rs
src/server/: handlers.rs  middleware.rs  mod.rs  routes.rs  shutdown.rs  state.rs  streaming.rs
src/telemetry/: metrics.rs  mod.rs  tracing_ext.rs
src/types/: messages.rs  mod.rs  request.rs  response.rs  streaming.rs
tests/: integration_tests.rs  property_tests.rs
tests/integration/: anthropic_tests.rs  common.rs  failure_tests.rs  google_tests.rs  mod.rs  openai_tests.rs  security_tests.rs  streaming_tests.rs
tests/property/: config_tests.rs  latency_tests.rs  mod.rs  serialization_tests.rs
