[package]
name = "llm-simulator"
version = "1.0.0"
edition = "2021"
authors = ["LLM DevOps Team"]
description = "Enterprise-grade offline LLM API simulator for testing and development"
license = "LicenseRef-LLM-DevOps"
repository = "https://github.com/llm-devops/llm-simulator"
keywords = ["llm", "simulator", "testing", "api", "openai"]
categories = ["development-tools", "simulation", "web-programming"]
rust-version = "1.75"

[features]
default = []
otel = []

[lib]
name = "llm_simulator"
path = "src/lib.rs"

[[bin]]
name = "llm-simulator"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing", "parking_lot"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["http2", "macros", "tokio"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout", "limit"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Configuration
config = "0.14"
figment = { version = "0.10", features = ["yaml", "toml", "json", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["trace", "metrics", "rt-tokio"] }
tracing-opentelemetry = "0.22"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
pin-project-lite = "0.2"
tokio-util = { version = "0.7", features = ["io"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP client (for health checks and SDK)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
fake = { version = "2.9", features = ["derive"] }
wiremock = "0.5"
assert_matches = "1.5"
tempfile = "3.9"
futures-util = "0.3"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
